# once-lang

./: .gitignore  README.md  comments.txt  comments2.txt  comments3.txt  flake.nix
.claude/: CLAUDE.md
Strata/Derived/: Canonical.once  Initial.once
Strata/Interpretations/Linux/: File.arm64  File.c  File.once  File.riscv64  File.x86_64  Thread.arm64  Thread.c  Thread.once  Thread.riscv64  Thread.x86_64  memory.arm64  memory.c  memory.once  memory.riscv64  memory.x86_64  syscalls.arm64  syscalls.c  syscalls.once  syscalls.riscv64  syscalls.x86_64
Strata/Interpretations/seL4/: ipc.arm64  ipc.once  notification.arm64  notification.once  types.once
compiler/: README.md  once.cabal  stack.yaml
compiler/app/: Main.hs
compiler/examples/: hello.once  hi.once  swap.once
compiler/src/Once/: CLI.hs  Elaborate.hs  Eval.hs  IR.hs  MAlonzo.hs  Module.hs  Optimize.hs  Parser.hs  Quantity.hs  Syntax.hs  Type.hs  TypeCheck.hs  Value.hs
compiler/src/Once/Backend/: C.hs  X86.hs
compiler/test/: BackendSpec.hs  ElaborateSpec.hs  IRSpec.hs  ModuleSpec.hs  OptimizeSpec.hs  ParserSpec.hs  QuantitySpec.hs  Spec.hs  TypeCheckSpec.hs
compiler/test/Backend/: Common.hs
compiler/test/Backend/C/: Spec.hs
compiler/test/fixtures/: import-test.once
compiler/test/fixtures/Strata/Derived/: Simple.once
compiler/test/fixtures/Strata/Interpretations/Linux/: Exit.c  Exit.once
docs/compiler/: decision-log.md  formal-verification-plan.md  implementation-plan.md
docs/design/: bare-metal.md  buffers.md  categorical-foundations.md  compiler.md  dependent-types-options.md  design-philosophy.md  effects-proposal.md  ffi.md  formal-verification.md  glossary.md  io.md  libraries.md  malonzo-compilation.md  memory.md  optimization.md  overview.md  parallelism.md  prelude.md  quickstart.md  recursion-schemes.md  riscv64-proof-reuse.md  syntax-exploration.md  time.md  transformation.md  type-system.md  unikernels.md
docs/design/formal/: verification-strategy.md
docs/formal/: fix-semantics-options.md  lessons-learned.md  what-is-proven.md  x86-remaining-proofs.md
examples/: hello.once  hi.once  let-test.once  memory-stress.once  swap.once  threads.once  type-alias-test.once
formal/: Makefile  Once.agda-lib
formal/Once/: Compile.agda  IR.agda  Optimize.agda  Postulates.agda  Semantics.agda  Type.agda
formal/Once/Backend/X86/: CodeGen.agda  Correct.agda  Semantics.agda  Syntax.agda
formal/Once/Category/: Laws.agda
formal/Once/Optimize/: Correct.agda
formal/Once/Surface/: Correct.agda  Desugar.agda  Elaborate.agda  IR.agda  Semantics.agda  Syntax.agda
formal/Once/Surface/Desugar/: Correct.agda
formal/Once/TypeSystem/: Soundness.agda  Typing.agda
interpretations/linux/: syscalls.c  syscalls.once
lib/Derived/Initial/: Recursion.once
tests/: Makefile  lib-test.once  simple.once  with-import.once
tests/Strata/Derived/: Simple.once
tests/Strata/Interpretations/Linux/: Exit.once
