cabal-version: 2.2

name:           once
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/compiler#readme>
homepage:       https://github.com/githubuser/compiler#readme
bug-reports:    https://github.com/githubuser/compiler/issues
author:         Jonas Claesson
maintainer:     jonas.cl@protonmail.com
copyright:      2025 Jonas Claesson
license:        GPL-2.0-only
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/compiler

common shared
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-patterns
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

library
  import: shared
  exposed-modules:
      Lib
      Once.Eval
      Once.IR
      Once.Quantity
      Once.Type
      Once.Value
  other-modules:
      Paths_once
  autogen-modules:
      Paths_once
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text

executable compiler-exe
  import: shared
  main-is: Main.hs
  other-modules:
      Paths_once
  autogen-modules:
      Paths_once
  hs-source-dirs:
      app
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , once

test-suite once-test
  import: shared
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_once
      IRSpec
      QuantitySpec
  autogen-modules:
      Paths_once
  hs-source-dirs:
      test
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , once
    , tasty
    , tasty-quickcheck
