cabal-version: 2.2

name:           once
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/compiler#readme>
homepage:       https://github.com/githubuser/compiler#readme
bug-reports:    https://github.com/githubuser/compiler/issues
author:         Jonas Claesson
maintainer:     jonas.cl@protonmail.com
copyright:      2025 Jonas Claesson
license:        GPL-2.0-only
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/compiler

common shared
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-patterns
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

library
  import: shared
  exposed-modules:
      Lib
      Once.Backend.C
      Once.Backend.X86
      Once.CLI
      Once.Elaborate
      Once.Eval
      Once.IR
      Once.MAlonzo
      Once.Module
      Once.Optimize
      Once.Parser
      Once.Quantity
      Once.Syntax
      Once.Type
      Once.TypeCheck
      Once.Value
  other-modules:
      Paths_once
      -- MAlonzo generated modules (from verified Agda)
      -- These are internal, imported only by Once.MAlonzo
      MAlonzo.RTE
      MAlonzo.Code.Once.Type
      MAlonzo.Code.Once.IR
      MAlonzo.Code.Once.Compile
      MAlonzo.Code.Once.Optimize
      MAlonzo.Code.Once.Surface.IR
      MAlonzo.Code.Once.Surface.Desugar
      MAlonzo.Code.Agda.Builtin.Bool
      MAlonzo.Code.Agda.Builtin.Equality
      MAlonzo.Code.Agda.Builtin.Maybe
      MAlonzo.Code.Agda.Builtin.Sigma
      MAlonzo.Code.Agda.Builtin.String
      MAlonzo.Code.Agda.Builtin.Unit
      MAlonzo.Code.Agda.Primitive
      MAlonzo.Code.Data.Bool.Base
      MAlonzo.Code.Data.Empty
      MAlonzo.Code.Data.Irrelevant
      MAlonzo.Code.Data.Sum.Base
      MAlonzo.Code.Function.Base
      MAlonzo.Code.Level
      MAlonzo.Code.Relation.Nullary.Decidable.Core
      MAlonzo.Code.Relation.Nullary.Negation.Core
      MAlonzo.Code.Relation.Nullary.Reflects
  autogen-modules:
      Paths_once
  hs-source-dirs:
      src
      ../formal/_build/malonzo
  ghc-options:
      -Wno-overlapping-patterns
      -Wno-missing-signatures
      -Wno-unused-imports
      -Wno-missing-export-lists
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , filepath
    , megaparsec
    , text

executable once
  import: shared
  main-is: Main.hs
  other-modules:
      Paths_once
  autogen-modules:
      Paths_once
  hs-source-dirs:
      app
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , once
    , text

test-suite once-test
  import: shared
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_once
      Backend.C.Spec
      Backend.Common
      BackendSpec
      ElaborateSpec
      IRSpec
      ModuleSpec
      OptimizeSpec
      ParserSpec
      QuantitySpec
      TypeCheckSpec
  autogen-modules:
      Paths_once
  hs-source-dirs:
      test
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , once
    , process
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
