cabal-version: 2.2

name:           once
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/compiler#readme>
homepage:       https://github.com/githubuser/compiler#readme
bug-reports:    https://github.com/githubuser/compiler/issues
author:         Jonas Claesson
maintainer:     jonas.cl@protonmail.com
copyright:      2025 Jonas Claesson
license:        GPL-2.0-only
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/compiler

common shared
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-patterns
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

library
  import: shared
  exposed-modules:
      Lib
      Once.Backend.C
      Once.Backend.X86
      Once.CLI
      Once.Elaborate
      Once.Eval
      Once.IR
      Once.MAlonzo
      Once.Module
      Once.Optimize
      Once.Parser
      Once.Quantity
      Once.Syntax
      Once.Type
      Once.TypeCheck
      Once.Value
  other-modules:
      Paths_once
      -- MAlonzo generated modules (from verified Agda)
      -- These are internal, imported only by Once.MAlonzo
      -- Note: Many modules are pulled in via Data.String.Properties for TVar equality
      MAlonzo.RTE
      MAlonzo.RTE.Float
      MAlonzo.Code.Once.Type
      MAlonzo.Code.Once.IR
      MAlonzo.Code.Once.Compile
      MAlonzo.Code.Once.Optimize
      MAlonzo.Code.Once.Surface.IR
      MAlonzo.Code.Once.Surface.Desugar
      -- Agda builtins
      MAlonzo.Code.Agda.Builtin.Bool
      MAlonzo.Code.Agda.Builtin.Char
      MAlonzo.Code.Agda.Builtin.Char.Properties
      MAlonzo.Code.Agda.Builtin.Equality
      MAlonzo.Code.Agda.Builtin.List
      MAlonzo.Code.Agda.Builtin.Maybe
      MAlonzo.Code.Agda.Builtin.Nat
      MAlonzo.Code.Agda.Builtin.Sigma
      MAlonzo.Code.Agda.Builtin.String
      MAlonzo.Code.Agda.Builtin.String.Properties
      MAlonzo.Code.Agda.Builtin.Unit
      MAlonzo.Code.Agda.Primitive
      -- Algebra
      MAlonzo.Code.Algebra
      MAlonzo.Code.Algebra.Bundles
      MAlonzo.Code.Algebra.Bundles.Raw
      MAlonzo.Code.Algebra.Consequences.Base
      MAlonzo.Code.Algebra.Consequences.Propositional
      MAlonzo.Code.Algebra.Consequences.Setoid
      MAlonzo.Code.Algebra.Construct.LiftedChoice
      MAlonzo.Code.Algebra.Construct.NaturalChoice.Base
      MAlonzo.Code.Algebra.Construct.NaturalChoice.Max
      MAlonzo.Code.Algebra.Construct.NaturalChoice.MaxOp
      MAlonzo.Code.Algebra.Construct.NaturalChoice.Min
      MAlonzo.Code.Algebra.Construct.NaturalChoice.MinMaxOp
      MAlonzo.Code.Algebra.Construct.NaturalChoice.MinOp
      MAlonzo.Code.Algebra.Core
      MAlonzo.Code.Algebra.Definitions
      MAlonzo.Code.Algebra.Definitions.RawMagma
      MAlonzo.Code.Algebra.Lattice.Bundles
      MAlonzo.Code.Algebra.Lattice.Bundles.Raw
      MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MaxOp
      MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinMaxOp
      MAlonzo.Code.Algebra.Lattice.Construct.NaturalChoice.MinOp
      MAlonzo.Code.Algebra.Lattice.Properties.BooleanAlgebra
      MAlonzo.Code.Algebra.Lattice.Properties.DistributiveLattice
      MAlonzo.Code.Algebra.Lattice.Properties.Lattice
      MAlonzo.Code.Algebra.Lattice.Properties.Semilattice
      MAlonzo.Code.Algebra.Lattice.Structures
      MAlonzo.Code.Algebra.Morphism
      MAlonzo.Code.Algebra.Morphism.Definitions
      MAlonzo.Code.Algebra.Morphism.Structures
      MAlonzo.Code.Algebra.Properties.CommutativeSemigroup
      MAlonzo.Code.Algebra.Properties.Semigroup
      MAlonzo.Code.Algebra.Structures
      MAlonzo.Code.Algebra.Structures.Biased
      -- Axiom
      MAlonzo.Code.Axiom.Extensionality.Propositional
      MAlonzo.Code.Axiom.UniquenessOfIdentityProofs
      -- Data.Bool
      MAlonzo.Code.Data.Bool
      MAlonzo.Code.Data.Bool.Base
      MAlonzo.Code.Data.Bool.ListAction
      MAlonzo.Code.Data.Bool.Properties
      -- Data.Char
      MAlonzo.Code.Data.Char.Base
      MAlonzo.Code.Data.Char.Properties
      -- Data.Empty
      MAlonzo.Code.Data.Empty
      MAlonzo.Code.Data.Empty.Polymorphic
      -- Data.Fin
      MAlonzo.Code.Data.Fin.Base
      MAlonzo.Code.Data.Fin.Patterns
      MAlonzo.Code.Data.Fin.Properties
      -- Data.Irrelevant
      MAlonzo.Code.Data.Irrelevant
      -- Data.List
      MAlonzo.Code.Data.List.Base
      MAlonzo.Code.Data.List.Effectful
      MAlonzo.Code.Data.List.Extrema
      MAlonzo.Code.Data.List.Extrema.Core
      MAlonzo.Code.Data.List.Membership.DecPropositional
      MAlonzo.Code.Data.List.Membership.DecSetoid
      MAlonzo.Code.Data.List.Membership.Propositional
      MAlonzo.Code.Data.List.Membership.Propositional.Properties
      MAlonzo.Code.Data.List.Membership.Propositional.Properties.Core
      MAlonzo.Code.Data.List.Membership.Setoid
      MAlonzo.Code.Data.List.Membership.Setoid.Properties
      MAlonzo.Code.Data.List.NonEmpty.Base
      MAlonzo.Code.Data.List.Properties
      MAlonzo.Code.Data.List.Relation.Binary.Equality.Propositional
      MAlonzo.Code.Data.List.Relation.Binary.Equality.Setoid
      MAlonzo.Code.Data.List.Relation.Binary.Lex
      MAlonzo.Code.Data.List.Relation.Binary.Lex.Core
      MAlonzo.Code.Data.List.Relation.Binary.Lex.Strict
      MAlonzo.Code.Data.List.Relation.Binary.Pointwise
      MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Base
      MAlonzo.Code.Data.List.Relation.Binary.Pointwise.Properties
      MAlonzo.Code.Data.List.Relation.Binary.Subset.Propositional
      MAlonzo.Code.Data.List.Relation.Binary.Subset.Setoid
      MAlonzo.Code.Data.List.Relation.Unary.All
      MAlonzo.Code.Data.List.Relation.Unary.AllPairs
      MAlonzo.Code.Data.List.Relation.Unary.AllPairs.Core
      MAlonzo.Code.Data.List.Relation.Unary.All.Properties.Core
      MAlonzo.Code.Data.List.Relation.Unary.Any
      MAlonzo.Code.Data.List.Relation.Unary.Any.Properties
      MAlonzo.Code.Data.List.Relation.Unary.Unique.Setoid
      -- Data.Maybe
      MAlonzo.Code.Data.Maybe.Base
      MAlonzo.Code.Data.Maybe.Relation.Unary.Any
      -- Data.Nat
      MAlonzo.Code.Data.Nat
      MAlonzo.Code.Data.Nat.Base
      MAlonzo.Code.Data.Nat.Divisibility
      MAlonzo.Code.Data.Nat.Divisibility.Core
      MAlonzo.Code.Data.Nat.DivMod
      MAlonzo.Code.Data.Nat.DivMod.Core
      MAlonzo.Code.Data.Nat.GeneralisedArithmetic
      MAlonzo.Code.Data.Nat.Induction
      MAlonzo.Code.Data.Nat.Properties
      -- Data.Parity
      MAlonzo.Code.Data.Parity.Base
      -- Data.Product
      MAlonzo.Code.Data.Product.Algebra
      MAlonzo.Code.Data.Product.Base
      MAlonzo.Code.Data.Product.Function.Dependent.Propositional
      MAlonzo.Code.Data.Product.Function.NonDependent.Propositional
      MAlonzo.Code.Data.Product.Function.NonDependent.Setoid
      MAlonzo.Code.Data.Product.Properties
      MAlonzo.Code.Data.Product.Relation.Binary.Pointwise.NonDependent
      MAlonzo.Code.Data.Product.Relation.Unary.All
      -- Data.Sign
      MAlonzo.Code.Data.Sign.Base
      -- Data.String
      MAlonzo.Code.Data.String
      MAlonzo.Code.Data.String.Base
      MAlonzo.Code.Data.String.Properties
      -- Data.Sum
      MAlonzo.Code.Data.Sum
      MAlonzo.Code.Data.Sum.Algebra
      MAlonzo.Code.Data.Sum.Base
      MAlonzo.Code.Data.Sum.Function.Propositional
      MAlonzo.Code.Data.Sum.Function.Setoid
      MAlonzo.Code.Data.Sum.Properties
      MAlonzo.Code.Data.Sum.Relation.Binary.Pointwise
      -- Data.These
      MAlonzo.Code.Data.These.Base
      -- Data.Unit
      MAlonzo.Code.Data.Unit.Base
      MAlonzo.Code.Data.Unit.Polymorphic
      MAlonzo.Code.Data.Unit.Polymorphic.Base
      MAlonzo.Code.Data.Unit.Polymorphic.Properties
      -- Data.Vec
      MAlonzo.Code.Data.Vec.Base
      -- Effect
      MAlonzo.Code.Effect.Applicative
      MAlonzo.Code.Effect.Choice
      MAlonzo.Code.Effect.Empty
      MAlonzo.Code.Effect.Functor
      MAlonzo.Code.Effect.Monad
      -- Function
      MAlonzo.Code.Function.Base
      MAlonzo.Code.Function.Bundles
      MAlonzo.Code.Function.Consequences
      MAlonzo.Code.Function.Consequences.Propositional
      MAlonzo.Code.Function.Consequences.Setoid
      MAlonzo.Code.Function.Construct.Composition
      MAlonzo.Code.Function.Construct.Identity
      MAlonzo.Code.Function.Construct.Symmetry
      MAlonzo.Code.Function.Core
      MAlonzo.Code.Function.Definitions
      MAlonzo.Code.Function.Dependent.Bundles
      MAlonzo.Code.Function.Indexed.Relation.Binary.Equality
      MAlonzo.Code.Function.Metric.Bundles
      MAlonzo.Code.Function.Metric.Core
      MAlonzo.Code.Function.Metric.Definitions
      MAlonzo.Code.Function.Metric.Nat
      MAlonzo.Code.Function.Metric.Nat.Bundles
      MAlonzo.Code.Function.Metric.Nat.Core
      MAlonzo.Code.Function.Metric.Nat.Definitions
      MAlonzo.Code.Function.Metric.Nat.Structures
      MAlonzo.Code.Function.Metric.Structures
      MAlonzo.Code.Function.Properties.Bijection
      MAlonzo.Code.Function.Properties.Inverse
      MAlonzo.Code.Function.Properties.Inverse.HalfAdjointEquivalence
      MAlonzo.Code.Function.Properties.RightInverse
      MAlonzo.Code.Function.Properties.Surjection
      MAlonzo.Code.Function.Related.Propositional
      MAlonzo.Code.Function.Related.TypeIsomorphisms
      MAlonzo.Code.Function.Structures
      -- Induction
      MAlonzo.Code.Induction
      MAlonzo.Code.Induction.WellFounded
      -- Level
      MAlonzo.Code.Level
      -- Relation.Binary
      MAlonzo.Code.Relation.Binary
      MAlonzo.Code.Relation.Binary.Bundles
      MAlonzo.Code.Relation.Binary.Bundles.Raw
      MAlonzo.Code.Relation.Binary.Consequences
      MAlonzo.Code.Relation.Binary.Construct.Closure.Reflexive
      MAlonzo.Code.Relation.Binary.Construct.Closure.Reflexive.Properties
      MAlonzo.Code.Relation.Binary.Construct.Composition
      MAlonzo.Code.Relation.Binary.Construct.Constant.Core
      MAlonzo.Code.Relation.Binary.Construct.Flip.EqAndOrd
      MAlonzo.Code.Relation.Binary.Construct.Intersection
      MAlonzo.Code.Relation.Binary.Construct.NaturalOrder.Left
      MAlonzo.Code.Relation.Binary.Construct.NonStrictToStrict
      MAlonzo.Code.Relation.Binary.Construct.On
      MAlonzo.Code.Relation.Binary.Core
      MAlonzo.Code.Relation.Binary.Definitions
      MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous
      MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Bundles
      MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Construct.Trivial
      MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Core
      MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Definitions
      MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Structures
      MAlonzo.Code.Relation.Binary.Lattice
      MAlonzo.Code.Relation.Binary.Lattice.Bundles
      MAlonzo.Code.Relation.Binary.Lattice.Definitions
      MAlonzo.Code.Relation.Binary.Lattice.Structures
      MAlonzo.Code.Relation.Binary.Morphism.Definitions
      MAlonzo.Code.Relation.Binary.Morphism.Structures
      MAlonzo.Code.Relation.Binary.Properties.DecTotalOrder
      MAlonzo.Code.Relation.Binary.Properties.Poset
      MAlonzo.Code.Relation.Binary.Properties.Preorder
      MAlonzo.Code.Relation.Binary.Properties.Setoid
      MAlonzo.Code.Relation.Binary.Properties.TotalOrder
      MAlonzo.Code.Relation.Binary.PropositionalEquality
      MAlonzo.Code.Relation.Binary.PropositionalEquality.Algebra
      MAlonzo.Code.Relation.Binary.PropositionalEquality.Core
      MAlonzo.Code.Relation.Binary.PropositionalEquality.Properties
      MAlonzo.Code.Relation.Binary.Reasoning.Base.Double
      MAlonzo.Code.Relation.Binary.Reasoning.Base.Single
      MAlonzo.Code.Relation.Binary.Reasoning.Base.Triple
      MAlonzo.Code.Relation.Binary.Reasoning.Preorder
      MAlonzo.Code.Relation.Binary.Reasoning.Setoid
      MAlonzo.Code.Relation.Binary.Reasoning.Syntax
      MAlonzo.Code.Relation.Binary.Structures
      MAlonzo.Code.Relation.Binary.Structures.Biased
      -- Relation.Nullary
      MAlonzo.Code.Relation.Nullary
      MAlonzo.Code.Relation.Nullary.Decidable
      MAlonzo.Code.Relation.Nullary.Decidable.Core
      MAlonzo.Code.Relation.Nullary.Indexed
      MAlonzo.Code.Relation.Nullary.Irrelevant
      MAlonzo.Code.Relation.Nullary.Negation
      MAlonzo.Code.Relation.Nullary.Negation.Core
      MAlonzo.Code.Relation.Nullary.Recomputable
      MAlonzo.Code.Relation.Nullary.Recomputable.Core
      MAlonzo.Code.Relation.Nullary.Reflects
      -- Relation.Unary
      MAlonzo.Code.Relation.Unary
      MAlonzo.Code.Relation.Unary.PredicateTransformer
      MAlonzo.Code.Relation.Unary.Properties
  autogen-modules:
      Paths_once
  hs-source-dirs:
      src
      ../formal/_build/malonzo
  ghc-options:
      -Wno-overlapping-patterns
      -Wno-missing-signatures
      -Wno-unused-imports
      -Wno-missing-export-lists
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , filepath
    , megaparsec
    , text

executable once
  import: shared
  main-is: Main.hs
  other-modules:
      Paths_once
  autogen-modules:
      Paths_once
  hs-source-dirs:
      app
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , once
    , text

test-suite once-test
  import: shared
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_once
      Backend.C.Spec
      Backend.Common
      BackendSpec
      ElaborateSpec
      IRSpec
      ModuleSpec
      OptimizeSpec
      ParserSpec
      QuantitySpec
      TypeCheckSpec
  autogen-modules:
      Paths_once
  hs-source-dirs:
      test
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , once
    , process
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
